--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DB_URL = 'mongodb+srv://ulvispaethe:lanadelrey@mern-blog.z50n4ta.mongodb.net/'
-JWT_SECRET = 'ulvi'
+DB_URL = 'mongodb+srv://aayush:danadalrey@blogger2.ib7rs.mongodb.net/?retryWrites=true&w=majority&appName=blogger2'
+JWT_SECRET = 'aayush'
