--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "firebase": "^11.0.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.11.0",
     "mongoose": "^8.2.0",
     "nodemon": "^3.1.0"
   }
